<resources>
    <string name="app_name">Urmovie</string>
    <string name="sort_by">Sort by</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="load_more_movies">Click to load more...</string>
    <string name="no_internet_title">Failed to load, try again</string>
    <string name="no_internet_description">An error occurred while getting the data for you, tap on Retry to Load again.</string>
    <string name="retry">Retry</string>

    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote average</string>
    <string name="plot_synopsis">Plot synopsis</string>
    <string name="favorite_option">Favorite</string>
    <string name="favorites_option">Favorites</string>
    <string name="videos">Trailers</string>
    <string name="reviews">Reviews</string>
</resources>
